2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* widget.cs: Worked on ressource de-allocation.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* widget.cs: Worked on resource freeing of the diff widget.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* widget.cs: fixed "Bug 474156 - diff window wraps lines of
	  code".

2009-02-19  Mike Krüger  <mkrueger@novell.com>

	* widget.cs: fixed "Bug 409910 - Lines added in a diff make
	  user think identing is incorrect".

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* widget.cs: Fixed "Bug 472140 - Diff widget breaks themes".

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* DiffWidget.csproj: Make implicit references explicit. Csc is
	  much pickier about these.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* DiffWidget.csproj: Fix build.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* DiffWidget.mdp:
	* DiffWidget.csproj: Migrated to MSBuild file format.
